[gd_scene load_steps=6 format=3 uid="uid://coudojfv3btw0"]

[ext_resource type="Script" path="res://Menu/Menu.gd" id="1_6n8vl"]
[ext_resource type="PackedScene" uid="uid://cf7g45lqeacaq" path="res://Menu/Warning Notification.tscn" id="2_ax71r"]
[ext_resource type="Texture2D" uid="uid://hltuqgsufdel" path="res://UI/Backdrop.tres" id="2_g3bfi"]

[sub_resource type="Gradient" id="Gradient_hmejo"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.588235, 0, 0, 0.392157, 1, 0, 0, 1, 0.588235, 0, 0, 0.392157)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j247s"]
gradient = SubResource("Gradient_hmejo")
fill_from = Vector2(1, 0)
fill_to = Vector2(1, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_6n8vl")

[node name="Backdrop" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_g3bfi")

[node name="ErrorHighlight" type="TextureRect" parent="."]
visible = false
offset_left = 576.0
offset_top = 312.0
offset_right = 1150.0
offset_bottom = 376.0
texture = SubResource("GradientTexture2D_j247s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="Top" type="ColorRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(1, 1, 1, 0)

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Stellaris Modder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="Start" type="Button" parent="VBoxContainer/HBoxContainer/Buttons"]
layout_mode = 2
size_flags_vertical = 3
text = "Start"

[node name="Load" type="Button" parent="VBoxContainer/HBoxContainer/Buttons"]
layout_mode = 2
size_flags_vertical = 3
text = "Load"

[node name="Information" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FileDialog" type="FileDialog" parent="VBoxContainer/HBoxContainer/Information"]
mode = 2
title = "Open a Directory"
initial_position = 2
size = Vector2i(452, 162)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
metadata/Path = "/"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Information"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Information/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
text = "Path to your Mod folder"
vertical_alignment = 1
clip_text = true

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/Information/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Select"

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(1, 1, 1, 0)

[node name="Window" parent="." instance=ExtResource("2_ax71r")]
visible = false

[connection signal="button_up" from="VBoxContainer/HBoxContainer/Buttons/Start" to="." method="_on_start_button_up"]
[connection signal="dir_selected" from="VBoxContainer/HBoxContainer/Information/FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Information/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="Continue" from="Window" to="." method="_on_window_continue"]
